<resources>
    <string name="app_name">Roadmaps</string>
    <string name="category">Категория</string>
    <string name="update_info">Обновление информации</string>
    <string name="update_question">Обновление вопросов</string>
    <string name="roadmap">Roadmap</string>
    <string name="theory">Теория</string>
    <string name="list_tittle">Список тем</string>
    <string name="question">Вопросы</string>
    <string name="exam">Экзамен</string>
    <string name="topic"><font color='#F1720E'>topic </font></string>
    <!--    <string name="action_settings">Settings</string>-->
    <!--    <string name="category_fragment">Category Fragment</string>-->
    <!--    <string name="question_fragment">Question Fragment</string>-->
    <!--    <string name="answer_fragment">Answer Fragment</string>-->
    <!--    <string name="next">Next</string>-->
    <!--    <string name="previous">Previous</string>-->

    <!--    <string name="hello_first_fragment">Hello first fragment</string>-->
    <!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
</resources>